Add content to travel and venue pages. Messed around with some styling

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
       </div>
       <div id="countdown">
-        <h2>Countdown</h2>
+        <h2>Countdown to the day!</h2>
         <p><span id="days"></span> days</p>
         <p><span id="hours"></span> hours</p>
         <p><span id="mins"></span> mins</p>
