Started adding the weather API

--- a/index.html
+++ b/index.html
@@ -1,49 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Lou & Josh's wedding site</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../styles/reset.css" />
-    <link rel="stylesheet" href="../styles/main.css" />
-    <link rel="stylesheet" href="../styles/home.css" />
-    <script src="./scripts/index.js" async defer></script>
-    <script
-      src="https://kit.fontawesome.com/35e4240984.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Lou & Josh's wedding site</title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="../styles/reset.css" />
+  <link rel="stylesheet" href="../styles/main.css" />
+  <link rel="stylesheet" href="../styles/home.css" />
+  <script type="module" src="./scripts/index.js" async defer></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/35e4240984.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <nav class="mobile-nav-wrapper">
     <button class="menu" aria-label="Main Menu">
       <svg width="80" height="80" viewBox="30 5 40 90">
-        <path
-          class="line line1"
-          d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"
-        />
+        <path class="line line1"
+          d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
         <path class="line line2" d="M 20,50 H 80" />
-        <path
-          class="line line3"
-          d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"
-        />
+        <path class="line line3"
+          d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
       </svg>
     </button>
-    <nav class="desktop-nav-wrapper">
-      <p>
-        <a href="./index.html">Home</a>
-      </p>
-      <p>
-        <a href="./travel.html">Travel</a>
-      </p>
-      <p>
-        <a href="./venue.html">Venue</a>
-      </p>
-      <p>
-        <a href="./contact.html">RSVP</a>
-      </p>
-    </nav>
-    <nav class="mobile-nav-wrapper">
+    <div class="mobile-nav-links">
       <ul>
         <li>
           <a href="./index.html">Home</a>
@@ -56,33 +40,37 @@
         </li>
         <li><a href="./contact.html">RSVP</a></li>
       </ul>
-    </nav>
-    <header>
-      <div class="flowers">
-        <div class="flower1"></div>
-        <div class="flower2"></div>
-        <div class="flower3"></div>
-      </div>
-      <h1 id="home">Lou & Josh</h1>
-      <img
-        src="../assets/couple.jpeg"
-        alt=""
-        id="header-image"
-        title="Image of couple"
-      />
-    </header>
-    <main>
-      <button id="rsvp"><a href="./contact.html">RSVP</a></button>
-      <div id="info-wrapper">
-        <div id="location">
-          <h2><i class="fas fa-map-marker-alt"></i>Location</h2>
-          <p>Jardins de Barbirey, Rue du Château, Barbirey-sur-Ouche, France</p>
-        </div>
-        <div id="time">
-          <h2><i class="fas fa-clock"></i>Time</h2>
-          <p>2:30 PM (CET)</p>
-          <p>31st July 2021</p>
-        </div>
+    </div>
+  </nav>
+  <nav class="desktop-nav-wrapper">
+    <p>
+      <a href="./index.html">Home</a>
+    </p>
+    <p>
+      <a href="./travel.html">Travel</a>
+    </p>
+    <p>
+      <a href="./venue.html">Venue</a>
+    </p>
+    <p>
+      <a href="./contact.html">RSVP</a>
+    </p>
+  </nav>
+
+  <header>
+    <h1 id="home">Lou & Josh</h1>
+    <img src="../assets/couple.jpeg" alt="" id="header-image" title="Image of couple" />
+  </header>
+  <main>
+    <button id="rsvp"><a href="./contact.html">RSVP</a></button>
+    <div id="info-wrapper">
+      <div id="event-info">
+        <h2><i class="fas fa-map-marker-alt"></i>Location</h2>
+        <p>Jardins de Barbirey, Rue du Château, Barbirey-sur-Ouche, France</p>
+
+        <h2><i class="fas fa-clock"></i>Time</h2>
+        <p>2:30 PM (CET)</p>
+        <p>31st July 2021</p>
       </div>
       <div id="countdown">
         <h2>Countdown to the day!</h2>
@@ -91,9 +79,17 @@
         <p><span id="mins"></span> mins</p>
         <p><span id="secs"></span> secs</p>
       </div>
-    </main>
-    <footer>
-      <p>Made by Chrisi &copy;</p>
-    </footer>
-  </body>
+    </div>
+    <div id="weather">
+      <h2>Weather in Barbirey-sur-Ouche, France</h2>
+      <div id="weather-display">
+
+      </div>
+    </div>
+  </main>
+  <footer>
+    <p>Made by Chrisi &copy;</p>
+  </footer>
+</body>
+
 </html>
