--- a/travel.html
+++ b/travel.html
@@ -1,41 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Travel information | Lou & Josh's wedding</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../styles/reset.css" />
-    <link rel="stylesheet" href="../styles/main.css" />
-    <link rel="stylesheet" href="../styles/travel.css" />
-    <script src="../scripts/index.js" async defer></script>
-    <script
-      src="https://kit.fontawesome.com/35e4240984.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Travel information | Lou & Josh's wedding</title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="../styles/reset.css" />
+  <link rel="stylesheet" href="../styles/main.css" />
+  <link rel="stylesheet" href="../styles/travel.css" />
+  <script src="../scripts/index.js" async defer></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/35e4240984.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <nav class="mobile-nav-wrapper">
     <button class="menu" aria-label="Main Menu">
       <svg width="80" height="80" viewBox="30 5 40 90">
-        <path
-          class="line line1"
-          d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"
-        />
+        <path class="line line1"
+          d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
         <path class="line line2" d="M 20,50 H 80" />
-        <path
-          class="line line3"
-          d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"
-        />
+        <path class="line line3"
+          d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
       </svg>
     </button>
-    <nav class="desktop-nav-wrapper">
-      <a href="./index.html">Home</a>
-      <a href="./travel.html">Travel</a>
-      <a href="./venue.html">Venue</a>
-      <a href="./contact.html">RSVP</a>
-    </nav>
-    <nav class="mobile-nav-wrapper">
+    <div class="mobile-nav-links">
       <ul>
         <li>
           <a href="./index.html">Home</a>
@@ -48,59 +40,63 @@
         </li>
         <li><a href="./contact.html">RSVP</a></li>
       </ul>
-    </nav>
-    <header>
-      <div class="flowers">
-        <div class="flower1"></div>
-        <div class="flower2"></div>
-        <div class="flower3"></div>
-      </div>
-      <h1><span class="firstLine">Travelling</span> to the wedding</h1>
-      <img src="./assets/vinyard.jpeg" alt="" title="Descriptive image" />
-    </header>
-    <main>
-      <h2>
-        <i class="fas fa-car"></i>Drive from the UK or hire a car in France
-      </h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
-        error. A deleniti soluta illum et consectetur, odit asperiores non
-        vitae? Dolorum itaque fugit ex quasi velit voluptas, culpa enim ipsum!
-      </p>
+    </div>
+  </nav>
+  <nav class="desktop-nav-wrapper">
+    <a href="./index.html">Home</a>
+    <a href="./travel.html">Travel</a>
+    <a href="./venue.html">Venue</a>
+    <a href="./contact.html">RSVP</a>
+    </div>
+  </nav>
+  <header>
+    <h1>Travelling to the wedding</h1>
+    <img src="./assets/chateau.jpeg" alt="" title="Descriptive image" />
+  </header>
+  <main>
+    <h2>
+      <i class="fas fa-car"></i>Drive from the UK or hire a car in France
+    </h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
+      error. A deleniti soluta illum et consectetur, odit asperiores non
+      vitae? Dolorum itaque fugit ex quasi velit voluptas, culpa enim ipsum!
+    </p>
 
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
-        error.
-      </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
+      error.
+    </p>
 
-      <h2><i class="fas fa-train"></i>Travel to Dijon by train</h2>
+    <h2><i class="fas fa-train"></i>Travel to Dijon by train</h2>
 
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate
-        maxime exercitationem, earum repellendus voluptatum officiis illo
-        temporibus! Corporis iure placeat eius cupiditate animi recusandae ipsa,
-        aliquam repellendus et dolorum nobis! Dignissimos et vel accusamus
-        perferendis blanditiis repudiandae inventore autem nulla iure optio
-        fugit, sunt ullam totam quod libero, harum temporibus quasi architecto
-        magnam quos vitae. Voluptatem corrupti fugiat nam a.
-      </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate
+      maxime exercitationem, earum repellendus voluptatum officiis illo
+      temporibus! Corporis iure placeat eius cupiditate animi recusandae ipsa,
+      aliquam repellendus et dolorum nobis! Dignissimos et vel accusamus
+      perferendis blanditiis repudiandae inventore autem nulla iure optio
+      fugit, sunt ullam totam quod libero, harum temporibus quasi architecto
+      magnam quos vitae. Voluptatem corrupti fugiat nam a.
+    </p>
 
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quas
-        quod suscipit atque minima dolore minus dolorem ipsam vero, ea nam alias
-        repudiandae dignissimos hic incidunt, doloribus vitae soluta dolor.
-      </p>
-      <h2><i class="fas fa-plane"></i>Fly to France</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit:</p>
-      <ul>
-        <li>Exercitationem in quo qui praesentium nostrum animi.</li>
-        <li>
-          Repudiandae dignissimos hic incidunt, doloribus vitae soluta dolor.
-        </li>
-      </ul>
-    </main>
-    <footer>
-      <p>Made by Chrisi &copy;</p>
-    </footer>
-  </body>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus quas
+      quod suscipit atque minima dolore minus dolorem ipsam vero, ea nam alias
+      repudiandae dignissimos hic incidunt, doloribus vitae soluta dolor.
+    </p>
+    <h2><i class="fas fa-plane"></i>Fly to France</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit:</p>
+    <ul>
+      <li>Exercitationem in quo qui praesentium nostrum animi.</li>
+      <li>
+        Repudiandae dignissimos hic incidunt, doloribus vitae soluta dolor.
+      </li>
+    </ul>
+  </main>
+  <footer>
+    <p>Made by Chrisi &copy;</p>
+  </footer>
+</body>
+
 </html>
