Adding some more condiions

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../styles/contact.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
-  <script src="./scripts/index.js" async defer></script>
+  <script type="module" src="./scripts/index.js" async defer></script>
   <script src="https://kit.fontawesome.com/35e4240984.js" crossorigin="anonymous"></script>
 </head>
 
