--- a/index.html
+++ b/index.html
@@ -80,10 +80,16 @@
         <p><span id="secs"></span> secs</p>
       </div>
     </div>
-    <div id="weather">
-      <h2>Weather in Barbirey-sur-Ouche, France</h2>
-      <div id="weather-display">
+    <h2>Weather in Barbirey-sur-Ouche, France</h2>
+    <div id="weather-wrapper">
+      <div id="weather-type">
+        <p>It is <span id="weather-type-text"></span></p>
+        <p><span id="weather-type-icon">
 
+          </span></p>
+      </div>
+      <div id="weather-desciption">
+        <p id="weather-description-text"></p>
       </div>
     </div>
   </main>
