--- a/travel.html
+++ b/travel.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../styles/reset.css" />
   <link rel="stylesheet" href="../styles/main.css" />
   <link rel="stylesheet" href="../styles/travel.css" />
-  <script src="../scripts/index.js" async defer></script>
+  <script type="mdoule" src="../scripts/index.js" async defer></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/35e4240984.js" crossorigin="anonymous"></script>
