finish to weather API and some fixes to file paths

--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>RSVP | Lou & Josh's wedding</title>
-  <meta name="description" content="" />
+  <meta name="description" content="Contact Lou & Josh to let them know your preferences for their wedding meal." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="../styles/reset.css" />
-  <link rel="stylesheet" href="../styles/main.css" />
-  <link rel="stylesheet" href="../styles/contact.css" />
+  <link rel="stylesheet" href="./styles/reset.css" />
+  <link rel="stylesheet" href="./styles/main.css" />
+  <link rel="stylesheet" href="./styles/contact.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
-  <script type="module" src="./scripts/index.js" async defer></script>
+  <script src="./scripts/main.js" async defer></script>
+  <script type="module" src="./scripts/contact.js" async defer></script>
   <script src="https://kit.fontawesome.com/35e4240984.js" crossorigin="anonymous"></script>
 </head>
 
@@ -42,12 +43,11 @@
       </ul>
     </div>
   </nav>
-  <div class="desktop-nav-wrapper">
+  <nav class="desktop-nav-wrapper">
     <a href="./index.html">Home</a>
     <a href="./travel.html">Travel</a>
     <a href="./venue.html">Venue</a>
     <a href="./contact.html">RSVP</a>
-  </div>
   </nav>
   <header>
     <h1>RSVP to our wedding</h1>
