--- a/venue.html
+++ b/venue.html
@@ -7,7 +7,7 @@
   <title>Venue information | Lou & Josh's wedding</title>
   <meta name="description" content="Find out where to stay when you come to Lou & Josh's wedding." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="../styles/reset.css" />
+  <link rel="stylesheet" href="./styles/reset.css" />
   <link rel="stylesheet" href="./styles/main.css" />
   <link rel="stylesheet" href="./styles/venue.css" />
   <script src="./scripts/main.js" async defer></script>
