--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <nav class="mobile-nav-wrapper">
+  <nav>
     <button class="menu" aria-label="Main Menu">
       <svg width="80" height="80" viewBox="30 5 40 90">
         <path class="line line1"
@@ -29,28 +29,13 @@
           d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
       </svg>
     </button>
-    <div class="mobile-nav-links">
-      <ul>
-        <li>
-          <a href="./index.html">Home</a>
-        </li>
-        <li>
-          <a href="./travel.html">Travel</a>
-        </li>
-        <li>
-          <a href="./venue.html">Venue</a>
-        </li>
-        <li><a href="./contact.html">RSVP</a></li>
-      </ul>
+    <div class="nav-links">
+      <a href="./index.html">Home</a>
+      <a href="./travel.html">Travel</a>
+      <a href="./venue.html">Venue</a>
+      <a href="./contact.html">RSVP</a>
     </div>
   </nav>
-  <nav class="desktop-nav-wrapper">
-    <a href="./index.html">Home</a>
-    <a href="./travel.html">Travel</a>
-    <a href="./venue.html">Venue</a>
-    <a href="./contact.html">RSVP</a>
-  </nav>
-
   <header>
     <h1 id="home">Lou & Josh</h1>
     <img src="./assets/couple.jpeg" alt="" id="header-image" title="Image of couple" />
