some more form functionality

--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,7 @@
     </div>
     <div id="weddingOptions">
       <h2>Ready for the big day?</h2>
+      <p>Completing form for: <span id="guest"></span></p>
       <form>
         <label for="rsvp">RSVP</label>
         <div id="rsvp">
@@ -73,6 +74,7 @@
           <textarea id="comments"></textarea>
 
         </div>
+        <p id="error"><i class="fas fa-exclamation-cirlce"></i>Check you've provided an answer for all fields</p>
         <button id="submit">Send away!</button>
     </div>
 
