--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     </div>
     <div id="no-invite">
       <h2>Something went wrong!</h2>
-      <p>Oh no! You're don't appear to be on the wedding list.</p>
+      <p>Oh no! You don't appear to be on the wedding list.</p>
       <p>Check you've entered your name correctly.</p>
     </div>
     <div id="weddingOptions">
