Fix form validation; add object to simulate guest data being sent to a server

--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,7 @@
         <div id="continue-form">
           <label for="meals">Dietary requirements</label>
           <select id="meals">
+            <option value=""></option>
             <option value="none">None</option>
             <option value="gluten-free">Gluten free</option>
             <option value="vegan">Vegan</option>
@@ -74,7 +75,7 @@
           <textarea id="comments"></textarea>
 
         </div>
-        <p id="error"><i class="fas fa-exclamation-cirlce"></i>Check you've provided an answer for all fields</p>
+        <p id="error"><i class="fas fa-exclamation-circle"></i>Check you've provided an answer for all fields</p>
         <button id="submit">Send away!</button>
     </div>
 
