--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta property="og:image" content="../assets/couple.jpeg">
   <title>Lou & Josh's wedding site</title>
   <meta name="description" content="Welcome to Lou & Josh's wedding site" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -41,9 +42,7 @@
     <img src="./assets/couple.jpeg" alt="" id="header-image" title="Image of couple" />
   </header>
   <main>
-    <form action="./contact.html">
-      <button id="rsvp" value="RSVP">RSVP</button>
-    </form>
+    <a href="./contact.html"><button id="rsvp">RSVP</button></a>
     <div id="info-wrapper">
       <div id="event-info">
         <h2><i class="fas fa-map-marker-alt"></i>Location</h2>
