--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta property="og:image" content="../assets/couple.jpeg">
-  <title>RSVP | Lou & Josh's wedding</title>
+  <title>RSVP | Lou &amp; Josh's wedding</title>
   <meta name="description" content="Contact Lou & Josh to let them know your preferences for their wedding meal." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="./styles/reset.css" />
