--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta property="og:image" content="../assets/couple.jpeg">
-  <title>Lou & Josh's wedding site</title>
+  <title>Lou &AMP; Josh's wedding site</title>
   <meta name="description" content="Welcome to Lou & Josh's wedding site" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="./styles/reset.css" />
