--- a/travel.html
+++ b/travel.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta property="og:image" content="../assets/couple.jpeg">
-  <title>Travel information | Lou & Josh's wedding</title>
+  <title>Travel information | Lou &amp; Josh's wedding</title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="./styles/reset.css" />
